--- a/netishr/index.html
+++ b/netishr/index.html
@@ -1,4 +1,4 @@
-<!--
+﻿<!--
 *
 *  INSPINIA - Responsive Admin Theme
 *  version 2.6.2
@@ -93,6 +93,8 @@
                     <li>
                         <a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Job</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
+                            <li><a href="graph_flot.html">Competency Model</a></li>
+                            <li><a href="Job/job_description.html">Job Description</a></li>
                             <li><a href="graph_flot.html">Competency Model</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
