--- a/netishr/index.html
+++ b/netishr/index.html
@@ -1,4 +1,4 @@
-﻿<!--
+<!--
 *
 *  INSPINIA - Responsive Admin Theme
 *  version 2.6.2
@@ -44,8 +44,8 @@
                              </span> <span class="text-muted text-xs block">HR Admin <b class="caret"></b></span> </span> </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="contacts.html">Contacts</a></li>
-                                <li><a href="mailbox.html">Mailbox</a></li>
+                                <li><a href="contacts.html">Account</a></li>
+                                <li><a href="settings.html">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
                             </ul>
@@ -56,12 +56,12 @@
                     </li>
 
                     <li>
-                        <a href="index.html"><i class="fa fa-diamond"></i> <span class="nav-label">Dashboards</span></a>
+                        <a href="index.html"><i class="fa fa-diamond"></i><span class="nav-label">Dashboards</span></a>
                     </li>
                     <li class="active">
-                        <a href="index.html"><i class="fa fa-th-large"></i> <span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
+                        <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a href="#">Level</span><span class="fa arrow"></span></a>
+                            <li><a href="#">Level<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="#">Branches</a>
@@ -71,19 +71,19 @@
                                     </li>
                                 </ul>                            
                             </li>
-                            <li><a href="#">Structure</span><span class="fa arrow"></span></a>
+                            <li><a href="#">Structure<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="job_levels.html">Job Levels/Sub-levels</a>
                                     </li>
                                     <li>
-                                        <a href="job_roles.html"">Job Roles/Role Bands</a>
+                                        <a href="job_roles.html">Job Roles/Role Bands</a>
                                     </li>
                                     <li>
-                                        <a href="job_clans.html"">Job Clans/Families</a>
+                                        <a href="job_clans.html">Job Clans/Families</a>
                                     </li>
                                     <li>
-                                        <a href="job_titles.html"">Job Titles</a>
+                                        <a href="job_titles.html">Job Titles</a>
                                     </li>
                                 </ul>                           
                             </li>
@@ -91,34 +91,32 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Job</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-bar-chart-o"></i><span class="nav-label">Job</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="graph_flot.html">Competency Model</a></li>
-                            <li><a href="Job/job_description.html">Job Description</a></li>
-                            <li><a href="graph_flot.html">Competency Model</span><span class="fa arrow"></span></a>
+                            <li><a href="#"><span class="nav-label">Competency Model</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="competency_dictionary.html">Competency Dictionary</a>
                                     </li>
                                     <li>
-                                        <a href="job_roles.html"">Competency Matrix</a>
+                                        <a href="job_roles.html">Competency Matrix</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="graph_morris.html">Job Description</a></li>
+                            <li><a href="Job/job_description.html">Job Description</a></li>
                             <li><a href="graph_rickshaw.html">Workload Analysis</a></li>
                             <li><a href="accountability_matrix.html">Accountability Matrix</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="mailbox.html"><i class="fa fa-envelope"></i> <span class="nav-label">Person</a>
+                        <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="persons.html">Persons</a></li>
-                            <li><a href="persons_profiles.html">Profiles</a></li>
+                            <li><a href="persons_profile.html">Profiles</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="metrics.html"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span>  </a>
+                        <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span>  </a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="graph_flot.html">Manpower Planning</a></li>
                             <li><a href="graph_morris.html">Recruitment Planning</a></li>
@@ -127,14 +125,46 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="widgets.html"><i class="fa fa-flask"></i> <span class="nav-label">Performance</span></a>
+                        <a href="#"><i class="fa fa-flask"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="form_basic.html">KPI</a></li>
-                            <li><a href="form_advanced.html">Planning</a></li>
-                            <li><a href="form_wizard.html">Coaching</a></li>
-                            <li><a href="form_file_upload.html">Evidence</a></li>
-                            <li><a href="form_editors.html">Evaluation</a></li>
-                            <li><a href="form_autocomplete.html">Performance Information</a></li>
+                            <li><a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level">
+                                    <li>
+                                        <a href="competency_dictionary.html">Corporate Perspective/Objetives</a>
+                                    </li>
+                                    <li>
+                                        <a href="performance_kpi_view.html">Assign and view KPIs</a>
+                                    </li>
+                                </ul>
+                            </li>
+
+                            <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level">
+                                    <li>
+                                        <a href="#">Result Targets (KPI)</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Process Targets (Competency)</a>
+                                    </li>
+                                </ul>                                                        
+                            </li>
+                            <li><a href="#">Coaching</a></li>
+                            <li><a href="#">Evidence</a></li>
+                            <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level">
+                                    <li>
+                                        <a href="#">Periodical Evaluation - Result Targets (KPI)</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Final Evaluation - Result Targets (KPI)</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Final Evaluation - Process Targets (Competency)</a>
+                                    </li>
+
+                                </ul>                            
+                            </li>
+                            <li><a href="#">Performance Information</a></li>
                         </ul>
                     </li>
                     <li>
