Updated NetisHR files

--- a/netishr/performance_kpi_view.html
+++ b/netishr/performance_kpi_view.html
@@ -38,8 +38,8 @@
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="contacts.html">Account</a></li>
-                                <li><a href="settings.html">Settings</a></li>
+                                <li><a href="">Account</a></li>
+                                <li><a href="">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
                             </ul>
@@ -50,7 +50,7 @@
                     </li>
 
                     <li>
-                        <a href="index.html"><i class="fa fa-diamond"></i><span class="nav-label">Dashboards</span></a>
+                        <a href="index.html"><i class="fa fa-diamond"></i><span class="nav-label">Main</span></a>
                     </li>
                     <li class="active">
                         <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
@@ -258,7 +258,7 @@
                         <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
                         <form role="search" class="navbar-form-custom" action="search_results.html">
                             <div class="form-group">
-                                <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
+                                <input type="text" placeholder="Cari..." class="form-control" name="top-search" id="top-search">
                             </div>
                         </form>
                     </div>
@@ -611,10 +611,10 @@
             </div>
             <div class="footer">
                 <div class="pull-right">
-                    10GB of <strong>250GB</strong> Free.
+                    <strong>Version</strong> 2.x.xxxx.
                 </div>
                 <div>
-                    <strong>Copyright</strong> Netika Indonesia &copy; 2014-2017
+                    <strong>Copyright</strong> Netika Indonesia &copy; 2016
                 </div>
             </div>
 
