--- a/netishr/job_titles.html
+++ b/netishr/job_titles.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +11,9 @@
     <link href="css/plugins/footable/footable.core.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-	
+
 </head>
+
 <body>
     <div id="wrapper">
         <nav class="navbar-default navbar-static-side" role="navigation">
@@ -22,12 +24,13 @@
                             <img alt="image" class="img-circle" src="img/profile_small.jpg" />
                              </span>
                             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">Arnold Siboro</strong>
-                             </span> <span class="text-muted text-xs block">HR Admin <b class="caret"></b></span> </span> </a>
+                                <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">Arnold Siboro</strong>
+                             </span> <span class="text-muted text-xs block">HR Admin <b class="caret"></b></span> </span>
+                            </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="contacts.html">Account</a></li>
-                                <li><a href="settings.html">Settings</a></li>
+                                <li><a href="">Account</a></li>
+                                <li><a href="">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
                             </ul>
@@ -38,7 +41,7 @@
                     </li>
 
                     <li>
-                        <a href="index.html"><i class="fa fa-diamond"></i><span class="nav-label">Dashboards</span></a>
+                        <a href="index.html"><i class="fa fa-diamond"></i><span class="nav-label">Main</span></a>
                     </li>
                     <li class="active">
                         <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
@@ -51,7 +54,7 @@
                                     <li>
                                         <a href="#">Internal Groups</a>
                                     </li>
-                                </ul>                            
+                                </ul>
                             </li>
                             <li><a href="#">Structure<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
@@ -67,7 +70,7 @@
                                     <li>
                                         <a href="job_titles.html">Job Titles</a>
                                     </li>
-                                </ul>                           
+                                </ul>
                             </li>
                             <li><a href="org_charts.html">Charts</a></li>
                         </ul>
@@ -115,7 +118,7 @@
                                         <a href="competency_dictionary.html">Corporate Perspective/Objetives</a>
                                     </li>
                                     <li>
-                                        <a href="job_roles.html">Assign and view KPIs</a>
+                                        <a href="performance_kpi_view.html">Assign and view KPIs</a>
                                     </li>
                                 </ul>
                             </li>
@@ -128,7 +131,7 @@
                                     <li>
                                         <a href="#">Process Targets (Competency)</a>
                                     </li>
-                                </ul>                                                        
+                                </ul>
                             </li>
                             <li><a href="#">Coaching</a></li>
                             <li><a href="#">Evidence</a></li>
@@ -144,7 +147,7 @@
                                         <a href="#">Final Evaluation - Process Targets (Competency)</a>
                                     </li>
 
-                                </ul>                            
+                                </ul>
                             </li>
                             <li><a href="#">Performance Information</a></li>
                         </ul>
@@ -190,7 +193,7 @@
                                     </li>
                                     <li>
                                         <a href="#">Benefits</a>
-                                    </li>                       
+                                    </li>
                                     <li>
                                         <a href="#">Business Trips</a>
                                     </li>
@@ -216,7 +219,7 @@
                                     </li>
                                     <li>
                                         <a href="#">Payslip</a>
-                                    </li>                       
+                                    </li>
                                 </ul>
                             </li>
                             <li>
@@ -233,13 +236,13 @@
                         </ul>
                     </li>
 
-                
+
                 </ul>
 
             </div>
         </nav>
 
-<div id="page-wrapper" class="gray-bg">
+        <div id="page-wrapper" class="gray-bg">
             <div class="row border-bottom">
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
                     <div class="navbar-header">
@@ -256,7 +259,7 @@
                         </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                                <i class="fa fa-envelope"></i>  <span class="label label-warning">16</span>
+                                <i class="fa fa-envelope"></i> <span class="label label-warning">16</span>
                             </a>
                             <ul class="dropdown-menu dropdown-messages">
                                 <li>
@@ -266,7 +269,8 @@
                                         </a>
                                         <div class="media-body">
                                             <small class="pull-right">46h ago</small>
-                                            <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>. <br>
+                                            <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>.
+                                            <br>
                                             <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
                                         </div>
                                     </div>
@@ -279,7 +283,8 @@
                                         </a>
                                         <div class="media-body ">
                                             <small class="pull-right text-navy">5h ago</small>
-                                            <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica Smith</strong>. <br>
+                                            <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica Smith</strong>.
+                                            <br>
                                             <small class="text-muted">Yesterday 1:21 pm - 11.06.2014</small>
                                         </div>
                                     </div>
@@ -292,7 +297,8 @@
                                         </a>
                                         <div class="media-body ">
                                             <small class="pull-right">23h ago</small>
-                                            <strong>Monica Smith</strong> love <strong>Kim Smith</strong>. <br>
+                                            <strong>Monica Smith</strong> love <strong>Kim Smith</strong>.
+                                            <br>
                                             <small class="text-muted">2 days ago at 2:30 am - 11.06.2014</small>
                                         </div>
                                     </div>
@@ -309,7 +315,7 @@
                         </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                                <i class="fa fa-bell"></i>  <span class="label label-primary">8</span>
+                                <i class="fa fa-bell"></i> <span class="label label-primary">8</span>
                             </a>
                             <ul class="dropdown-menu dropdown-alerts">
                                 <li>
@@ -712,4 +718,5 @@
         });
     </script>
 </body>
+
 </html>
