--- a/netishr/persons_profile.html
+++ b/netishr/persons_profile.html
@@ -32,8 +32,8 @@
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="contacts.html">Account</a></li>
-                                <li><a href="settings.html">Settings</a></li>
+                                <li><a href="">Account</a></li>
+                                <li><a href="">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
                             </ul>
@@ -44,7 +44,7 @@
                     </li>
 
                     <li>
-                        <a href="index.html"><i class="fa fa-diamond"></i><span class="nav-label">Dashboards</span></a>
+                        <a href="index.html"><i class="fa fa-diamond"></i><span class="nav-label">Main</span></a>
                     </li>
                     <li class="active">
                         <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
@@ -121,7 +121,7 @@
                                         <a href="competency_dictionary.html">Corporate Perspective/Objetives</a>
                                     </li>
                                     <li>
-                                        <a href="job_roles.html">Assign and view KPIs</a>
+                                        <a href="performance_kpi_view.html">Assign and view KPIs</a>
                                     </li>
                                 </ul>
                             </li>
