Updated NetisHR files

--- a/netishr/Job/job_description.html
+++ b/netishr/Job/job_description.html
@@ -16,16 +16,16 @@
 
     <title>NetisHR</title>
 
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- FooTable -->
-    <link href="../css/plugins/footable/footable.core.css" rel="stylesheet">
+    <link href="css/plugins/footable/footable.core.css" rel="stylesheet">
 
-    <link href="../css/animate.css" rel="stylesheet">
-    <link href="../css/plugins/summernote/summernote.css" rel="stylesheet">
-    <link href="../css/plugins/summernote/summernote-bs3.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
+    <link href="css/plugins/summernote/summernote.css" rel="stylesheet">
+    <link href="css/plugins/summernote/summernote-bs3.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
 </head>
 
@@ -213,7 +213,7 @@
                         </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                                <i class="fa fa-envelope"></i>  <span class="label label-warning">16</span>
+                                <i class="fa fa-envelope"></i> <span class="label label-warning">16</span>
                             </a>
                             <ul class="dropdown-menu dropdown-messages">
                                 <li>
@@ -223,7 +223,8 @@
                                         </a>
                                         <div class="media-body">
                                             <small class="pull-right">46h ago</small>
-                                            <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>. <br>
+                                            <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>.
+                                            <br>
                                             <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
                                         </div>
                                     </div>
@@ -236,7 +237,8 @@
                                         </a>
                                         <div class="media-body ">
                                             <small class="pull-right text-navy">5h ago</small>
-                                            <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica Smith</strong>. <br>
+                                            <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica Smith</strong>.
+                                            <br>
                                             <small class="text-muted">Yesterday 1:21 pm - 11.06.2014</small>
                                         </div>
                                     </div>
@@ -249,7 +251,8 @@
                                         </a>
                                         <div class="media-body ">
                                             <small class="pull-right">23h ago</small>
-                                            <strong>Monica Smith</strong> love <strong>Kim Smith</strong>. <br>
+                                            <strong>Monica Smith</strong> love <strong>Kim Smith</strong>.
+                                            <br>
                                             <small class="text-muted">2 days ago at 2:30 am - 11.06.2014</small>
                                         </div>
                                     </div>
@@ -266,7 +269,7 @@
                         </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                                <i class="fa fa-bell"></i>  <span class="label label-primary">8</span>
+                                <i class="fa fa-bell"></i> <span class="label label-primary">8</span>
                             </a>
                             <ul class="dropdown-menu dropdown-alerts">
                                 <li>
@@ -365,10 +368,7 @@
                                             <div id="main_fucntion" class="tab-pane active">
                                                 <div class="panel-body">
                                                     <div class="summernote col-lg-12">
-                                                        <h3>Lorem Ipsum is simply</h3>
-                                                        dummy text of the printing and typesetting industry. <strong>Lorem Ipsum has been the industry's</strong> standard dummy text ever since the 1500s,
-                                                        when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-                                                        typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
+                                                        <h3>Lorem Ipsum is simply</h3> dummy text of the printing and typesetting industry. <strong>Lorem Ipsum has been the industry's</strong> standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
                                                         <br />
                                                         <br />
                                                         <ul>
@@ -423,8 +423,7 @@
                                                                 <tr class="gradeX">
                                                                     <td>Trident</td>
                                                                     <td>
-                                                                        Internet
-                                                                        Explorer 4.0
+                                                                        Internet Explorer 4.0
                                                                     </td>
                                                                     <td>Win 95+</td>
                                                                     <td class="center">4</td>
@@ -433,8 +432,7 @@
                                                                 <tr class="gradeC">
                                                                     <td>Trident</td>
                                                                     <td>
-                                                                        Internet
-                                                                        Explorer 5.0
+                                                                        Internet Explorer 5.0
                                                                     </td>
                                                                     <td>Win 95+</td>
                                                                     <td class="center">5</td>
@@ -443,8 +441,7 @@
                                                                 <tr class="gradeA">
                                                                     <td>Trident</td>
                                                                     <td>
-                                                                        Internet
-                                                                        Explorer 5.5
+                                                                        Internet Explorer 5.5
                                                                     </td>
                                                                     <td>Win 95+</td>
                                                                     <td class="center">5.5</td>
@@ -453,8 +450,7 @@
                                                                 <tr class="gradeA">
                                                                     <td>Trident</td>
                                                                     <td>
-                                                                        Internet
-                                                                        Explorer 6
+                                                                        Internet Explorer 6
                                                                     </td>
                                                                     <td>Win 98+</td>
                                                                     <td class="center">6</td>
@@ -549,8 +545,7 @@
                     <div class="heading" draggable="true">
                         <small class="chat-date pull-right">
                             02.19.2015
-                        </small>
-                        Small chat
+                        </small> Small chat
                     </div>
                     <div class="content">
 
@@ -776,8 +771,7 @@
                                     <li>
                                         <a href="#">
                                             <div class="small pull-right m-t-xs">9 hours ago</div>
-                                            <h4>Business valuation</h4>
-                                            It is a long established fact that a reader will be distracted.
+                                            <h4>Business valuation</h4> It is a long established fact that a reader will be distracted.
                                             <div class="small">Completion with: 22%</div>
                                             <div class="progress progress-mini">
                                                 <div style="width: 22%;" class="progress-bar progress-bar-warning"></div>
@@ -788,8 +782,7 @@
                                     <li>
                                         <a href="#">
                                             <div class="small pull-right m-t-xs">9 hours ago</div>
-                                            <h4>Contract with Company </h4>
-                                            Many desktop publishing packages and web page editors.
+                                            <h4>Contract with Company </h4> Many desktop publishing packages and web page editors.
                                             <div class="small">Completion with: 48%</div>
                                             <div class="progress progress-mini">
                                                 <div style="width: 48%;" class="progress-bar"></div>
@@ -799,8 +792,7 @@
                                     <li>
                                         <a href="#">
                                             <div class="small pull-right m-t-xs">9 hours ago</div>
-                                            <h4>Meeting</h4>
-                                            By the readable content of a page when looking at its layout.
+                                            <h4>Meeting</h4> By the readable content of a page when looking at its layout.
                                             <div class="small">Completion with: 14%</div>
                                             <div class="progress progress-mini">
                                                 <div style="width: 14%;" class="progress-bar progress-bar-info"></div>
@@ -810,8 +802,7 @@
                                     <li>
                                         <a href="#">
                                             <span class="label label-primary pull-right">NEW</span>
-                                            <h4>The generated</h4>
-                                            There are many variations of passages of Lorem Ipsum available.
+                                            <h4>The generated</h4> There are many variations of passages of Lorem Ipsum available.
                                             <div class="small">Completion with: 22%</div>
                                             <div class="small text-muted m-t-xs">Project end: 4:00 pm - 12.06.2014</div>
                                         </a>
@@ -819,8 +810,7 @@
                                     <li>
                                         <a href="#">
                                             <div class="small pull-right m-t-xs">9 hours ago</div>
-                                            <h4>Business valuation</h4>
-                                            It is a long established fact that a reader will be distracted.
+                                            <h4>Business valuation</h4> It is a long established fact that a reader will be distracted.
                                             <div class="small">Completion with: 22%</div>
                                             <div class="progress progress-mini">
                                                 <div style="width: 22%;" class="progress-bar progress-bar-warning"></div>
@@ -831,8 +821,7 @@
                                     <li>
                                         <a href="#">
                                             <div class="small pull-right m-t-xs">9 hours ago</div>
-                                            <h4>Contract with Company </h4>
-                                            Many desktop publishing packages and web page editors.
+                                            <h4>Contract with Company </h4> Many desktop publishing packages and web page editors.
                                             <div class="small">Completion with: 48%</div>
                                             <div class="progress progress-mini">
                                                 <div style="width: 48%;" class="progress-bar"></div>
@@ -842,8 +831,7 @@
                                     <li>
                                         <a href="#">
                                             <div class="small pull-right m-t-xs">9 hours ago</div>
-                                            <h4>Meeting</h4>
-                                            By the readable content of a page when looking at its layout.
+                                            <h4>Meeting</h4> By the readable content of a page when looking at its layout.
                                             <div class="small">Completion with: 14%</div>
                                             <div class="progress progress-mini">
                                                 <div style="width: 14%;" class="progress-bar progress-bar-info"></div>
@@ -971,9 +959,7 @@
                                 <div class="sidebar-content">
                                     <h4>Settings</h4>
                                     <div class="small">
-                                        I belive that. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                        And typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-                                        Over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+                                        I belive that. Lorem Ipsum is simply dummy text of the printing and typesetting industry. And typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
                                     </div>
                                 </div>
 
@@ -1038,10 +1024,20 @@
                         responsive: true,
                         dom: '<"html5buttons"B>lTfgitp',
                         buttons: [
-                            { extend: 'copy' },
-                            { extend: 'csv' },
-                            { extend: 'excel', title: 'ExampleFile' },
-                            { extend: 'pdf', title: 'ExampleFile' },
+                            {
+                                extend: 'copy'
+                            },
+                            {
+                                extend: 'csv'
+                            },
+                            {
+                                extend: 'excel',
+                                title: 'ExampleFile'
+                            },
+                            {
+                                extend: 'pdf',
+                                title: 'ExampleFile'
+                            },
 
                             {
                                 extend: 'print',
@@ -1050,15 +1046,15 @@
                                     $(win.document.body).css('font-size', '10px');
 
                                     $(win.document.body).find('table')
-                                            .addClass('compact')
-                                            .css('font-size', 'inherit');
+                                        .addClass('compact')
+                                        .css('font-size', 'inherit');
                                 }
                             }
                         ]
 
                     });
                 });
-
             </script>
 </body>
+
 </html>
