--- a/netishr/index.html
+++ b/netishr/index.html
@@ -104,8 +104,8 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="Job/job_description.html">Job Description</a></li>
-                            <li><a href="graph_rickshaw.html">Workload Analysis</a></li>
+                            <li><a href="job_description.html">Job Description</a></li>
+                            <li><a href="#">Workload Analysis</a></li>
                             <li><a href="accountability_matrix.html">Accountability Matrix</a></li>
                         </ul>
                     </li>
@@ -113,16 +113,15 @@
                         <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="persons.html">Persons</a></li>
-                            <li><a href="persons_profile.html">Profiles</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span>  </a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="graph_flot.html">Manpower Planning</a></li>
-                            <li><a href="graph_morris.html">Recruitment Planning</a></li>
-                            <li><a href="graph_rickshaw.html">Applicants</a></li>
-                            <li><a href="graph_chartjs.html">Selection Process</a></li>
+                            <li><a href="#">Manpower Planning</a></li>
+                            <li><a href="#">Recruitment Planning</a></li>
+                            <li><a href="#">Applicants</a></li>
+                            <li><a href="#">Selection Process</a></li>
                         </ul>
                     </li>
                     <li>
@@ -171,22 +170,22 @@
                     <li>
                         <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Training</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="form_basic.html">Syllabus</a></li>
-                            <li><a href="form_advanced.html">Events</a></li>
-                            <li><a href="form_wizard.html">Individual Development Plan</a></li>
-                            <li><a href="form_file_upload.html">Training Plan</a></li>
-                            <li><a href="form_editors.html">Executed Training</a></li>
+                            <li><a href="#">Syllabus</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Individual Development Plan</a></li>
+                            <li><a href="#">Training Plan</a></li>
+                            <li><a href="#">Executed Training</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-desktop"></i> <span class="nav-label">Career</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="contacts.html">Individual Career Plan</a></li>
-                            <li><a href="profile.html">Search Talent</a></li>
-                            <li><a href="profile_2.html">Talent Pool</a></li>
-                            <li><a href="contacts_2.html">Talent Development Program</a></li>
-                            <li><a href="projects.html">Talent Readiness</a></li>
-                            <li><a href="project_detail.html">Transfer</a></li>
+                            <li><a href="#">Individual Career Plan</a></li>
+                            <li><a href="#">Search Talent</a></li>
+                            <li><a href="#">Talent Pool</a></li>
+                            <li><a href="#">Talent Development Program</a></li>
+                            <li><a href="#">Talent Readiness</a></li>
+                            <li><a href="#">Transfer</a></li>
                         </ul>
                     </li>
                     <li>
@@ -285,7 +284,7 @@
                                         </a>
                                         <div class="media-body">
                                             <small class="pull-right">46h ago</small>
-                                            <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>.
+                                            <strong>Mike Loreipsum</strong> said Please finish your performance planning.
                                             <br>
                                             <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
                                         </div>
@@ -299,7 +298,7 @@
                                         </a>
                                         <div class="media-body ">
                                             <small class="pull-right text-navy">5h ago</small>
-                                            <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica Smith</strong>.
+                                            <strong>Chris Johnatan Overtunk</strong> said Can you check my evidence?
                                             <br>
                                             <small class="text-muted">Yesterday 1:21 pm - 11.06.2014</small>
                                         </div>
@@ -313,7 +312,7 @@
                                         </a>
                                         <div class="media-body ">
                                             <small class="pull-right">23h ago</small>
-                                            <strong>Monica Smith</strong> love <strong>Kim Smith</strong>.
+                                            <strong>Monica Smith</strong> said Can I ask regarding my KPI?
                                             <br>
                                             <small class="text-muted">2 days ago at 2:30 am - 11.06.2014</small>
                                         </div>
@@ -322,7 +321,7 @@
                                 <li class="divider"></li>
                                 <li>
                                     <div class="text-center link-block">
-                                        <a href="mailbox.html">
+                                        <a href="messages.html">
                                             <i class="fa fa-envelope"></i> <strong>Read All Messages</strong>
                                         </a>
                                     </div>
@@ -337,7 +336,7 @@
                                 <li>
                                     <a href="mailbox.html">
                                         <div>
-                                            <i class="fa fa-envelope fa-fw"></i> You have 16 messages
+                                            <i class="fa fa-envelope fa-fw"></i> Monica Smith asks for leave approval
                                             <span class="pull-right text-muted small">4 minutes ago</span>
                                         </div>
                                     </a>
@@ -346,7 +345,7 @@
                                 <li>
                                     <a href="profile.html">
                                         <div>
-                                            <i class="fa fa-twitter fa-fw"></i> 3 New Followers
+                                            <i class="fa fa-twitter fa-fw"></i> John Doe asks for attendance approval
                                             <span class="pull-right text-muted small">12 minutes ago</span>
                                         </div>
                                     </a>
