Updated NetisHR files

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -130,7 +130,7 @@
                             <li><a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="competency_dictionary.html">Corporate Perspective/Objetives</a>
+                                        <a href="#">Corporate Perspective/Objetives</a>
                                     </li>
                                     <li>
                                         <a href="performance_kpi_view.html">Assign and view KPIs</a>
