--- a/netishr/competency_dictionary.html
+++ b/netishr/competency_dictionary.html
@@ -415,6 +415,13 @@
                             <div class="alert alert-success">
                                 <strong>Success!</strong> Indicates a successful or positive action.
                             </div>
+
+                            <p>
+                                <div class="ibox-tools">
+                                    <a href="competency_dictionary_new.html" class="btn-primary btn-xs">New Competency</a>
+                                </div>
+                            </p>
+
                             <div class="col-lg-12">
                                 <div class="tabs-container">
                                     <div class="tabs-left">
